# ftl

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SESSION.NOTES.md  ftl_benchmarks.json  ftl_benchmarks_summary.md  pyproject.toml  run_benchmarks.py  test_proxy.py
ftl/: cli.py  cloudwatch.py  config.py  credentials.py  diff.py  guardrails.py  ignore.py  languages.py  lint.py  log.py  orchestrator.py  planner.py  proxy.py  render.py  secrets.py  tracing.py  ui.py
ftl/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  kiro.py
ftl/sandbox/: __init__.py  base.py  docker.py
ftl/snapshot/: __init__.py  base.py  local.py  s3.py
scripts/: publish.sh
tests/: test_agents.py  test_cli_setup.py  test_diff_review.py  test_languages.py  test_lint.py  test_merge_lint.py  test_planner.py  test_render.py  test_sandbox.py  test_session.py  test_snapshot.py  test_ui.py
