[project]
name = "ftl"
version = "0.1.0"
description = "Zero-trust control plane for AI development"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "litellm>=1.40",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
proxy = [
    "cryptography>=42.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
ftl = "ftl.cli:main"

[tool.setuptools.packages.find]
include = ["ftl*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
